--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,70 @@
 /* main.css */
+html{
+	margin: 0;
+	padding: 0;
+}
 body{
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: white;
+	box-sizing: border-box;
 	font-family: HelveticaNeue, 'Helvetica Neue', HelveticaNeueRoman, HelveticaNeue-Roman, 'Helvetica Neue Roman', Helvetica, Tahoma, Geneva, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 200;
 	font-weight: normal;
-	line-height: 26px;
+	line-height: 32px;
 	padding: 0;
 	margin: 0;
+	color: #222;
+
+	width: 500px;
+	margin: 150px auto;
 }
 
-button{
+h1{
+	font-size: 24px;
+	font-weight: normal;
+}
+
+a{
+	text-decoration: none;
+	color: #1DAD57;
+	font-weight: bold;
+}
+
+em{
+	color: #666;
+}
+
+header,
+section{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+.uploadMethod{
 	cursor: pointer;
-	display: block;
-	width: 100%;
-	border: 1px solid #2860B1;
-	border-radius: 3px;
-	background-color: #2A60D5;
-	background: -webkit-linear-gradient(top, #68AFFE, #4099FD,#3C80FD);
-	box-shadow: inset 0 1px 0 #92C6FE;
-	box-sizing: border-box;
-	color: white;
-
-	margin: 10px 0;
-	padding: 5px 12px;
-
-	outline: none;
-	font-family: HelveticaNeue, 'Helvetica Neue', HelveticaNeueRoman, HelveticaNeue-Roman, 'Helvetica Neue Roman', Helvetica, Tahoma, Geneva, Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 200;
-	font-weight: normal;
-	line-height: 26px;
-	text-shadow: 0 -1px #222;
-
-}
-button:active{
-	background: -webkit-linear-gradient(top, #204FD5,#3C80FD);
-	color: #ACC6FD;
-	box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);
-}
-input[type="text"]{
+	display: inline-block;
+	padding: 20px 25px 22px 25px;
+	background: -webkit-linear-gradient(top, #FAFAFA, #EEE);
 	background-color: #FAFAFA;
-	box-sizing: border-box;
-	width: 100%;
-	margin: 5px 0;
-	padding: 10px;
-	box-shadow: inset 0 2px 3px rgba(0,0,0,0.2);
-
 	border: 1px solid #888;
-	border-radius: 3px;
-	outline: none;
-
-	font-family: HelveticaNeue, 'Helvetica Neue', HelveticaNeueRoman, HelveticaNeue-Roman, 'Helvetica Neue Roman', Helvetica, Tahoma, Geneva, Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 200;
+	border-radius: 5px;
+	box-shadow: 
+		inset 0 1px 0 white,
+		inset 0 -3px 0 #CCC,
+		inset 0 -4px 0 #AAA,
+		inset 0 -4px 6px rgba(0,0,0,0.1);
 	font-weight: normal;
+	color: #888;
+	margin-right: 15px;
+	text-shadow: 0 -1px white;
 }
-input[type="text"]:focus{
-	background-color: white;
-	border: 1px solid #2860B1;
+.uploadMethod:hover{
+	color: #222;
 }
+.uploadMethod:active{
+	box-shadow: inset 0 3px 5px rgba(0,0,0,0.2);
+	color: #666;
+	text-shadow: 0 2px #FFF;
+}
+
